# qcs-sdk-qir

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Readme.md
.github/workflows/: README.release.md  ci-unix.yml  ci-windows.yml  ci.yml  msrv.yml  release-unix.yml  test-e2e-qvm.yml
helper/: build.sh  helper.h  libqcs.h
scripts/release/: README.release.md  archive.sh  build.sh  clean.sh  setup.sh  test-e2e.sh
src/: lib.rs  main.rs  mod.rs
src/context/: context.rs  mod.rs  target.rs  types.rs  values.rs
src/interop/: call.rs  entrypoint.rs  instruction.rs  load.rs  mod.rs
src/output/: debug.rs  mod.rs
src/transform/: mod.rs
src/transform/shot_count_block/: mod.rs  pattern.rs  qir.rs  quil.rs
src/transform/shot_count_block/snapshots/: qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__cartesian_rotations.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__entrypoint_attribute.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__measure.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__measure_sparse.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__parametric.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__pauli_xyz.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__reduction.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__s_and_adjoint_s.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__shot_count_loop.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__swap.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__t_and_adjoint_t.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__toffoli.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__transformed_with_qcs_decls.snap  qcs_sdk_qir__transform__shot_count_block__qir__test__can_transpile_program_with__vqe_iteration.snap  qcs_sdk_qir__transform__shot_count_block__quil__test__can_transpile_program_with__cartesian_rotations.snap  (+19 more)
src/transform/unitary/: mod.rs  pattern.rs  qir.rs  quil.rs
test/fixtures/programs/: bell_state.bc  bell_state.ll  hadamard.bc  hadamard.ll  hadamard_qubit_zero.bc  hadamard_qubit_zero.ll  measure.bc  measure.ll  measure_sparse.bc  measure_sparse.ll  parametric.bc  parametric.ll  reduction.bc  reduction.ll  shot_count_loop.bc  vqe_iteration.bc  vqe_iteration.ll
tests/: public_lib_api.rs  snapshots.rs  transpile-to-quil.md
tests/fixtures/programs/: bad_param_types.bc  bad_param_types.ll  bell_state.bc  cartesian_rotations.bc  cartesian_rotations.ll  entrypoint_attribute.bc  entrypoint_attribute.ll  measure.bc  measure_sparse.bc  non-unitary.bc  parametric.bc  parametric.ll  pauli_xyz.bc  pauli_xyz.ll  record_output.bc  record_output.ll  record_output_tagged.bc  record_output_tagged.ll  reduction.bc  s_and_adjoint_s.bc  s_and_adjoint_s.ll  shot_count_loop.bc  shot_count_loop.ll  swap.bc  swap.ll  t_and_adjoint_t.bc  t_and_adjoint_t.ll  toffoli.bc  toffoli.ll  transformed_with_qcs_decls.bc  transformed_with_qcs_decls.ll  vqe_iteration.bc  vqe_iteration.ll
tests/snapshots/: public_lib_api__capture_recorded_output_and_convert-2.snap  public_lib_api__capture_recorded_output_and_convert.snap  public_lib_api__transpile_qir_to_quil_bell_state-2.snap  public_lib_api__transpile_qir_to_quil_bell_state.snap
(+16 files in other folders)
