[package]
name = "qcs-sdk-qir"
version = "0.1.0"
authors = [
    "Kalan <ksnyder@rigetti.com>",
    "Mark Skilbeck <mark.skilbeck@rigetti.com>",
    "Steve Manuel <smanuel@rigetti.com>",
]
edition = "2021"
license = "Apache-2.0"

[dependencies]
either = "1.6.1"
env_logger = "0.11.0"
eyre = "0.6.6"
lazy_static = "1.4.0"
log = "0.4.14"
num-complex = "0.4.0"
quil-rs = "0.29.2"                                                 # Part of public API, major versions are breaking changes.
regex = "1.5.4"
clap = { version = "4.5", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
qcs = { version = "0.25.6", optional = true }

[dependencies.inkwell]
version = "0.5.0"
features = ["target-x86"]

[dev-dependencies]
insta = "1.8.0"
trycmd = "0.15.8"

[features]
cli = ["clap"]
output = ["qcs"]                             # Enables the `output` module
default = ["serde_support", "cli", "output"]
llvm12-0 = ["inkwell/llvm12-0"]
llvm13-0 = ["inkwell/llvm13-0"]
serde_support = ["serde", "serde_json"]

[[bin]]
name = "qcs-sdk-qir"
path = "src/main.rs"
required-features = ["cli"]
