[package]
name = "qcs-sdk-qir"
version = "0.1.0"
authors = [
    "Kalan <ksnyder@rigetti.com>",
    "Mark Skilbeck <mark.skilbeck@rigetti.com>",
    "Steve Manuel <smanuel@rigetti.com>",
]
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
either = "1.6.1"
env_logger = "0.11.0"
eyre = "0.6.6"
inkwell = { version = "0.6.0", features = ["target-x86"] }
lazy_static = "1.4.0"
log = "0.4.14"
num-complex = "0.4.0"
# qcs re-exports quil-rs. We use this re-exported version for consistency.
# quil-rs types are part of the public API, major versions are breaking changes.
qcs = { version = "0.25.11", optional = true }
regex = "1.5.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "2"

[dev-dependencies]
insta = { version = "1.8.0", features = ["json"] }
trycmd = "0.15"

[features]
cli = ["clap"]
output = ["qcs"]   # Enables the `output` module
default = ["serde_support", "cli", "output", "llvm13-0"]
#llvm12-0 = ["inkwell/llvm12-0"]
llvm13-0 = ["inkwell/llvm13-0"]
serde_support = ["serde", "serde_json"]

[[bin]]
name = "qcs-sdk-qir"
path = "src/main.rs"
required-features = ["cli"]
